welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:16: error: type mismatch;
 found   : Unit
 required: Boolean
for (compteur <- 1 to pas) {
              ^